// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppInsights > sendTelemetryEvent and sendExceptionEvent > should send orgId to appInsightsClient.trackException 1`] = `
{
  "exception": [anExtensionId/Dummy Exception: a dummy exception occurred],
  "measurements": undefined,
  "properties": {
    "orgId": "000dummyOrgId",
    "webUserId": "test-webUser",
  },
}
`;

exports[`AppInsights > sendTelemetryEvent and sendExceptionEvent > should send telemetry data to appInsightsClient.trackEvent 1`] = `
{
  "measurements": {},
  "name": "anExtensionId/Dummy Telemetry Event",
  "properties": {
    "orgId": "000dummyOrgId",
    "webUserId": "test-webUser",
  },
}
`;
